Adicionando as telas com as ligações

--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.html
@@ -9,9 +9,9 @@
 <body>
     <div class="Tela-Principal">
         <h1>Home Page</h1>
-        <button>Cadastros</button>
+        <a href="cadastro.html"><button>Cadastros</button></a>
         <br><br>
-        <button>Consulta</button>
+        <a href="Consulta.html"><button>Consulta</button></a>
         <br><br>
     </div>
 </body>
