--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/login.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de Login</title>
+    <title>Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -13,7 +13,8 @@
         <br> <br>
         <input type="password" placeholder="Senha:">
         <br><br>
-        <button>Enviar</button>
+       <a href="Principal.html"><button>Enviar</button></a>
+
     </div>
 </body>
 </html>
