--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.html
@@ -9,9 +9,13 @@
 <body>
     <div class="Tela-Principal">
         <h1>Home Page</h1>
-        <a href="cadastro.html"><button>Cadastros</button></a>
+        <a href="cadastro.html"><button>Cadastros Clientes</button></a>
         <br><br>
-        <a href="Consulta.html"><button>Consulta</button></a>
+        <a href="Consulta.html"><button>Consulta Clientes</button></a>
+        <br><br>
+        <a href="cadastroProduto.html"><button>Cadastros Produtos</button></a>
+        <br><br>
+        <a href="ListaProduto.html"><button>Lista de Produtos</button></a>
         <br><br>
     </div>
 </body>
