--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/ListaProduto.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/ListaProduto.html
@@ -9,6 +9,10 @@
 <body>
     <div class="Tela-Lista-De-Produto">
         <h1>Lista de Produto</h1>
+        <input type="text" placeholder=" Pesquisar:">
+        <button class="Btn-lupa">🔎</button>
+        
+        <br><br>
 
       <table>
         <tr>
@@ -37,9 +41,9 @@
       </table>
       <br><br>
 
-        <button>Consultar</button>
+        <button class="Btn-Consultar">Consultar</button>
         <br><br>
-        <a href="cadastroProduto.html"><button>+</button></a>
+        <a href="cadastroProduto.html"><button class="Btn-mais">+</button></a>
     </div>
 </body>
 </html>
