--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastro.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastro.html
@@ -8,22 +8,16 @@
 </head>
 <body>
     <div class="Tela-Cadastro">
-        <h1>Cadastro</h1>
+        <h1>Cadastro Usuário</h1>
         <input type="text" placeholder="Nome:">
         <br> <br>
         <input type="text" placeholder="E-mail:">
         <br> <br>
         <input type="password" placeholder="Senha:">
         <br><br>
+        <input type="password" placeholder="Confirmar Senha:">
+        <br><br>
         <input type="text" placeholder="Cargo:">
-        <br><br>
-        <label for="status">Status:</label>
-        <br><br>
-        <input type="radio" name="Status" required>
-        <label for="Status">Ativo</label>
-        <br><br>
-        <input type="radio" name="Status" required>
-        <label for="Status">Inativo</label>
         <br><br>
         <button>Cadastrar</button>
     </div>
