--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastroProduto.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastroProduto.html
@@ -17,6 +17,9 @@
         <br><br>
         <input type="text" placeholder="Qtd estoque:">
         <br><br>
+        <input type="text" placeholder="Avaliação: 1-5">
+        <br><br>
+    
 
         <label class = "picture" tabindex="0">
             <input type ="file" accept = "image/" id="picture__input" />    
