--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Consulta.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Consulta.html
@@ -7,8 +7,23 @@
     <link rel="stylesheet" href="Consulta.css">
 </head>
 <body>
-    <div class="Tela-Consulta">
-        <h1>Consulta</h1>
+    <div class="Tela-Consulta">  
+        <table>
+            <td>
+                <img class="logo" src="logo\Logo_Trembo.png" alt="">
+            </td>
+        </table>    
+        <table>
+            <td>
+                <h1>Consulta</h1>
+            </td>
+            <td>
+                <input class="cmpPesquisa"  type="text" placeholder="Pesquisa">
+            </td>
+            <td>
+                <button class="btn-buscar">Buscar</button>
+            </td>
+        </table>
       <table>
         <tr>
             <th>NOME</th>
