--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/ListaProduto.css
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/ListaProduto.css
@@ -69,3 +69,11 @@ button:hover{
    display: block;
 }
 
+.logo{
+    max-width: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float:right;
+}
+
