--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/ListaProduto.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/ListaProduto.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="Tela-Lista-De-Produto">
+        <img class="logo" src="logo\Logo_Trembo.png" alt="">
         <h1>Lista de Produto</h1>
         <input type="text" placeholder=" Pesquisar:">
         <button class="Btn-lupa">🔎</button>
