--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.css
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.css
@@ -39,3 +39,10 @@ font-size: 15px;
 button:hover{
     background-color: red;
 }
+
+.logo{
+    max-width: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
