--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/Principal.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="Tela-Principal">
+        <img class="logo" src="logo\Logo_Trembo.png" alt="">
         <h1>Home Page</h1>
         <a href="cadastro.html"><button>Cadastros Clientes</button></a>
         <br><br>
