--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastroProduto.css
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastroProduto.css
@@ -67,3 +67,10 @@ button:hover{
     color: #aaa;
     background: #eee;
 }
+
+.logo{
+    max-width: 105px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
