--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastro.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/cadastro.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="Tela-Cadastro">
+        <img class="logo" src="logo\Logo_Trembo.png" alt="">
         <h1>Cadastro Usuário</h1>
         <input type="text" placeholder="Nome:">
         <br> <br>
