--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/DetalhesCreatina.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/DetalhesCreatina.html
@@ -12,6 +12,7 @@
 
     <main>
         <div class="compra">
+            <img class="logo" src="logo\Logo_Trembo.png" alt="">
             <h2>CREATINA MONOHIDRATADA 300G</h2>
             <img src="./Imagens/creatina.jpg.png" width="250px">
             <p>Quimicamente, a creatina monohidratada é chamada de amina, 
