--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/DetalhesWhey.css
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/DetalhesWhey.css
@@ -41,3 +41,11 @@ Button{
     font-size: 15px;
 }
 
+.logo{
+    max-width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float:right
+}
+
