--- a/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/DetalhesWhey.html
+++ b/Trembo_Store_PI/src/main/java/com/example/TremboStore/view/DetalhesWhey.html
@@ -12,6 +12,7 @@
 
     <main>
         <div class="compra">
+            <img class="logo" src="logo\Logo_Trembo.png" alt="">
             <h2>Whey Protein - 900G</h2>
             <img src="./Imagens/whey.png" width="200px">
             <p>TN-top-whey-perfor-baunilha
